添加rxjava objectbox的简单案例使用

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidPractice</string>
+    <string name="button_add">Add</string>
+    <string name="input_hint">在这里输入笔记</string>
 </resources>
