//复习了一下自定义View  写了几个天气View

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AndroidPractice</string>
     <string name="button_add">Add</string>
     <string name="input_hint">在这里输入笔记</string>
+    <string name="list_change_data">Change Data</string>
 </resources>
